# linear-regression-cuda

./: .gitignore  CMakeLists.txt  README.md  check_hostname.cmake  remise.py
src/: CMakeLists.txt  cudacheck.h  experiments.cpp  experiments.h  fitcuda.cu  fitcuda.h  fitserial.cpp  fitserial.h  main.cpp
test/: CMakeLists.txt  test_cuda.cpp  test_serial.cpp  testutils.h
